feat: AI 助教流式對話與考題選項清洗